Skip blockchain tests with high memory usage (#1414)